--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "rs_demultiplex"
 version = "0.1.0"
-authors = ["Colin Davenport <colindave@hotmail.com>"]
+authors = ["Colin Davenport <colindaven@hotmail.com>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
